# ANTL

./: .gitignore  .gitlab-ci.yml  CONFIG  Makecache  Makefile  Makefile.am  README.md  ci_before_build.sh  config.h  config.status  configure.ac  wipeout-autotools
doc/html/: annotated.html  annotated.js  classes.html  dir_09022c9933186d04acd097297278883c.html  dir_09022c9933186d04acd097297278883c.js  dir_14025ece0efe57b61be2e69879946a59.html  dir_14025ece0efe57b61be2e69879946a59.js  dir_22f51d88efbc2a2445db92e8872dee63.html  dir_3676858163746d115573aef81e6c04f9.html  dir_41138d872e6444a882430a05f722ce50.html  dir_41138d872e6444a882430a05f722ce50.js  dir_87b0ca177f9df497419fa2309c5cd632.html  dir_87b91830d27cb2d622ca2e98024e55e3.html  dir_87feb3a28a86b9d3937da453f0a312d7.html  dir_87feb3a28a86b9d3937da453f0a312d7.js  dir_a6e54d2642f1b157239923284001a167.html  dir_a6e54d2642f1b157239923284001a167.js  dir_a7a28a4e3d350700f819e65570f1bb96.html  dir_ab8095670c774679cb14db513728ccfb.html  dir_ab8095670c774679cb14db513728ccfb.js  dir_b539ecef4bb45f4c71ef1233ba837fac.html  dir_bb0a0c34200457f183c951388b0d1ba8.html  dir_bb0a0c34200457f183c951388b0d1ba8.js  dir_bc180c71ffbf7d41ef371a8d39a776f3.html  dir_c2efa96b1c342b16ae8fcc53de56d8a7.html  dir_c2efa96b1c342b16ae8fcc53de56d8a7.js  dir_caee13d31f2e18c00e0314881a881a75.html  dir_caee13d31f2e18c00e0314881a881a75.js  dir_cc971ffa3de7a5b72a977fa65550059e.html  dir_cc971ffa3de7a5b72a977fa65550059e.js  dir_e817ba788d367f6b3b410c4d86af410c.html  dir_e817ba788d367f6b3b410c4d86af410c.js  dir_ecd4091c3da506792f67eb18375d526b.html  dir_ecd4091c3da506792f67eb18375d526b.js  files.html  files.js  formula.repository  functions.html  functions_func.html  functions_vars.html  (+9 more)
doc/latex/: annotated.tex  dir_09022c9933186d04acd097297278883c.tex  dir_14025ece0efe57b61be2e69879946a59.tex  dir_22f51d88efbc2a2445db92e8872dee63.tex  dir_3676858163746d115573aef81e6c04f9.tex  dir_41138d872e6444a882430a05f722ce50.tex  dir_87b0ca177f9df497419fa2309c5cd632.tex  dir_87b91830d27cb2d622ca2e98024e55e3.tex  dir_87feb3a28a86b9d3937da453f0a312d7.tex  dir_a6e54d2642f1b157239923284001a167.tex  dir_a7a28a4e3d350700f819e65570f1bb96.tex  dir_ab8095670c774679cb14db513728ccfb.tex  dir_b539ecef4bb45f4c71ef1233ba837fac.tex  dir_bb0a0c34200457f183c951388b0d1ba8.tex  dir_bc180c71ffbf7d41ef371a8d39a776f3.tex  dir_c2efa96b1c342b16ae8fcc53de56d8a7.tex  dir_caee13d31f2e18c00e0314881a881a75.tex  dir_cc971ffa3de7a5b72a977fa65550059e.tex  dir_e817ba788d367f6b3b410c4d86af410c.tex  dir_ecd4091c3da506792f67eb18375d526b.tex  files.tex  hierarchy.tex  refman.tex
include/ANTL/: Constants.hpp  PairZZLong.hpp  common.hpp  debug.hpp  utilities.hpp
src/: Makefile.dir  common.cpp  common.d  common_impl.hpp  debug.d
src/Arithmetic/: CC_impl.hpp  Makefile.dir  QQ_impl.hpp  mul_exact.cpp  mul_exact_impl.hpp  pseudodiv.cpp  pseudodiv_impl.hpp
src/Cubic/: ComplexCubicNumberField.cpp  CubicElement.cpp  CubicElementNF.cpp  CubicIdeal.cpp  CubicIdealNF.cpp  CubicNumberField.cpp  CubicOrder.cpp  CubicOrderNF.cpp  CubicOrderReal.cpp  GlobalCubicField.cpp  RealCubicNumberField.cpp  VectorFunctions.cpp  VoronoiComplex.cpp  VoronoiMethods.cpp  VoronoiReal.cpp  generalFunctions.cpp
src/DExponentiation/: DExponentiationIL_impl.hpp~  DExponentiationJSF_impl.hpp  DExponentiationJSF_impl.hpp~
src/DoubleExponentiation/: DExponentiationIL_impl.hpp~  DoubleExponentiationHBTJSF_impl.hpp  DoubleExponentiationHBTJSF_impl.hpp~  DoubleExponentiationIL_impl.hpp  DoubleExponentiationIL_impl.hpp~  DoubleExponentiationJSF_impl.hpp
src/Exponentiation/: ExponentiationBinary_impl.hpp  ExponentiationDoubleBaseSignedGreedy_impl.hpp~  ExponentiationDoubleBaseStrictChain_impl.hpp~  ExponentiationDoubleBaseUnsignedGreedy_impl.hpp~  ExponentiationExtendedDoubleBase_impl.hpp~  ExponentiationL2R_impl.hpp  ExponentiationL2R_impl.hpp~  ExponentiationNAF_impl.hpp  ExponentiationSB3_impl.hpp  ExponentiationSB3_impl.hpp~  ExponentiationWNAF_impl.hpp  ExponentiationWNAF_impl.hpp~  ExponentiationYao_impl.hpp
src/HashTable/: HashEntryInt_impl.hpp  HashEntryReal_impl.hpp  HashEntryVec_impl.hpp  HashEntry_impl.hpp  HashTable_impl.hpp  IndexedHashTable_impl.hpp
src/L_function/: Character.cpp  Character_impl.hpp  L_function_FF_impl.hpp  L_function_GF2EX.cpp  L_function_ZZ.cpp  L_function_impl.hpp  L_function_long.cpp  L_function_longlong.cpp  L_function_util.cpp  Makefile.dir
src/LinearAlgebra/: Smith.cpp
src/MultiExponentiation/: MulitExponentiationPippenger_impl.hpp~  MultiExponentiationPippenger_impl.hpp~
src/Quadratic/: Makefile.dir  QuadraticClassGroupElement_impl.hpp  QuadraticDistance.cpp  QuadraticDistanceBase.cpp  QuadraticIdealBase_GF2EX.cpp  QuadraticIdealBase_ZZ.cpp  QuadraticIdealBase_impl.hpp  QuadraticIdealBase_long.cpp  QuadraticInfElement_ZZ.cpp  QuadraticInfElement_impl.hpp  QuadraticInfElement_long.cpp  QuadraticNumber.cpp  QuadraticNumber_GF2EX.cpp  QuadraticNumber_ZZ.cpp  QuadraticNumber_impl.hpp  QuadraticNumber_long.cpp  QuadraticOrder_GF2EX.cpp  QuadraticOrder_ZZ.cpp  QuadraticOrder_impl.hpp  QuadraticOrder_long.cpp
src/XGCD/: Makefile.dir  hxgcd.cpp  hxgcd_impl.hpp  xgcd.cpp  xgcd_binary_l2r.cpp  xgcd_impl.hpp  xgcd_iter.cpp  xgcd_iter_impl.hpp  xgcd_plain.cpp  xgcd_plain_impl.hpp  xgcd_pseudo.cpp  xgcd_pseudo_impl.hpp
tests/: ARC_test.cpp  HeaderTest.cpp  README.md  UnitTests.hpp  common_Tests.cpp
tests/Arithmetic/: Makefile.dir  QQ_GF2EX_Tests.cpp  QQ_ZZ_Tests.cpp  QQ_ZZpEX_Tests.cpp  QQ_long_Tests.cpp  QQ_lzzpX_Tests.cpp  QQ_zzpX_Tests.cpp
tests/Cubic/: Doxyfile  Makefile  belabas-extract.cpp  cardanoMain.cpp  complex-cubic-data1  cubicTestMain.cpp  cubic_header.hpp  data-real1  magma-regulator-check  main.cpp
tests/Exponentiation/: zz_p_DoubleExponentiationTest.cpp  zz_p_ExponentiationTest.cpp
tests/IndexCalculus/: IndCalc_Tests.cpp  IndCalc_test.cpp
tests/LFunction/: LFunction_ZZ_Tests.cpp
tests/Quadratic/: Makefile.dir  QuadraticIdealBase_ZZ_Tests.cpp  QuadraticIdealBase_long_Tests.cpp  QuadraticInfElement_ZZ_Tests.cpp  QuadraticNumber_ZZ_Tests.cpp  QuadraticOrder_ZZ_Tests.cpp  (+1 more)
(+496 files in other folders)
